<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="vic.tbook.fragment.ShoppingCartFragment">
    <RelativeLayout
        android:id="@+id/rl_cart_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/shouye_bar_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/shopping_cart"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/edit"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_hint"
        android:id="@+id/tvEmptyCart"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvCart"
        android:layout_below="@+id/rl_cart_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/rl_cart_bottom"/>
    <RelativeLayout
    android:id="@+id/rl_cart_bottom"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="10dp"
    android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/total"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_total_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="￥0.0"
            android:textColor="@color/colorRed"
            android:layout_toRightOf="@+id/tv_total"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/btn_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/cart_btn_submit"
            android:text="@string/edit"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"/>
</RelativeLayout>

</RelativeLayout>
