<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="vic.tbook.fragment.StoreFragment">
    <LinearLayout
        android:id="@+id/ll_store_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="9dp"
        android:background="@drawable/shouye_bar_top"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/shouye_bg_input">
            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:background="@null"
                android:paddingLeft="10dp"
                android:layout_marginLeft="6dp"/>
            <ImageButton
                android:id="@+id/ib_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shouye_ico_search"
                android:layout_margin="7dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="分类"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"/>
        <ImageButton
            android:id="@+id/ib_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shouye_arrow_down"
            android:layout_gravity="center"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/sv_store_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_store_header">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_title_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/tv_title_recognize"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/tv_more"/>

                <GridView
                    android:id="@+id/gv_recog_content"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_below="@+id/tv_title_recommend"
                    android:layout_marginTop="10dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4">
                </GridView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_title_hot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/tv_title_hot"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/tv_more"/>

                <GridView
                    android:id="@+id/gv_hot_content"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_below="@+id/tv_title_hot"
                    android:layout_marginTop="10dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4">
                </GridView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_title_latest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/tv_title_latest"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/tv_more"/>

                <GridView
                    android:id="@+id/gv_latest_content"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_below="@+id/tv_title_latest"
                    android:layout_marginTop="10dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4">
                </GridView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
